tests/libs_are_implicitly_included/libs_are_implicitly_included.exp
Stopping existing server

Starting flow

Assert flow is running
Error ------------------------------------------------------------ src/a.js:3:17

Error: src/a.js:3
  3: let x: string = 123;
                     ^^^ Cannot assign `123` to `x` because number [1] is incompatible with string [2].
  References:
    3: let x: string = 123;
                       ^^^ [1]: number
    3: let x: string = 123;
              ^^^^^^ [2]: string


Found 1 error

Change lib file

Assert flow is not running
